[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"
lto = false                # Preserve the 'thin local LTO' for this build.

[profile.release]
split-debuginfo = "unpacked"
lto = "thin"

[workspace]
members = [
    "ocios/zk-sdk",
    "ocios/curve25519",
    "ocios/zk-token-sdk",
    "ocios/bpf",
    "ocios/compute-budget",
    "ocios/log-collector",
    "ocios/metrics",
    "ocios/measure",
    "ocios/timings",
    "ocios/type-overrides",
    "ocios/program-runtime",
    "ocios/poseidon",
    "ocios/security-txt",
    "ocios/ocp/address-lookup-table",
    "ocios/ocp/bpf-loader",
    "ocios/ocp/compute-budget",
    "ocios/ocp/config",
    "ocios/ocp/loader-v4",
    "ocios/ocp/vote",
    "ocios/ocp/stake",
    "ocios/ocp/system",
    "ocios/ocp/zk-elgamal-proof",
    "ocios/ocp/zk-token-proof",
    "ocios/ocp/memo",
    "ocios/ocp/token",
    "ocios/ocp/program-error-derive",
    "ocios/ocp/program-error",
    "ocios/ocp/pod",
    "ocios/ocp/discriminator-syn",
    "ocios/ocp/discriminator-derive",
    "ocios/ocp/discriminator",
    "ocios/ocp/type-length-value-derive",
    "ocios/ocp/type-length-value",
    "ocios/ocp/tlv-account-resolution",
    "ocios/ocp/token-group-interface",
    "ocios/ocp/token-metadata-interface",
    "ocios/ocp/transfer-hook-interface",
    "ocios/ocp/token-confidential-transfer-proof-extraction",
    "ocios/ocp/token-confidential-transfer-proof-generation",
    "ocios/ocp/token-confidential-transfer-ciphertext-arithmetic",
    "ocios/ocp/elgamal-registry",
    "ocios/ocp/token-2022",
    "ocios/ocp/associated-token-account-client",
    "ocios/ocp/associated-token-account",
    "ocios/ocp/instruction-padding",
    "ocios/version",
    "ocios/rayon-threadlimit",
    "ocios/inline-ocp",
    "ocios/lattice-hash",
    "ocios/bucket-map",
    "ocios/vm-transaction",
    "ocios/nohash-hasher",
    "ocios/accounts-db",
    "ocios/builtins-default-costs",
    "ocios/transaction-view",
    "ocios/compute-budget-instruction",
    "ocios/runtime-transaction",
    "ocios/vm-rent-collector",
    "ocios/vm-conformance",
    "ocios/cost-model",
    "ocios/fee",
    "ocios/vm",
    "ocios/builtins",
    "ocios/perf",
    "ocios/vote",
    "ocios/account-decoder-client-types",
    "ocios/transaction-status-client-types",
    "ocios/unified-scheduler-logic",
    "ocios/runtime",
    "consensus/merkle-tree",
    "consensus/entry",
    "consensus/account-decoder",
    "consensus/transaction-status",
    "consensus/storage-proto",
    "consensus/storage-bigtable",
    "consensus/ledger",
    "consensus/poh",
    "network/net-utils",
    "network/connection-cache",
    "network/rpc-client-api",
    "network/rpc-client",
    "network/remote-wallet",
    "network/clap-utils",
    "network/rpc-client-nonce-utils",
    "network/pubsub-client",
    "network/transaction-metrics-tracker",
    "network/tls-utils",
    "network/streamer",
    "network/quic-client",
    "network/thin-client",
    "network/tpu-client",
    "network/udp-client",
    "network/client",
    "network/bloom",
    "network/gossip",
    "access/tpu-client-next",
    "access/send-transaction-service",
    "access/cli-config",
    "access/faucet",
    "access/rpc",
    "access/geyser-plugin-interface",
    "access/geyser-plugin-manager",
    "access/turbine",
    "access/chain/banking-stage-ingress-types",
    "access/chain/unified-scheduler-pool",
    "access/chain/wen-restart",
    "access/chain/thread-manager",
    "access/chain/core",
    "access/vortexor",
    "node/banks-interface",
    "node/banks-server",
    "node/banks-client",
    "node/program-test",
    "node/cli-output",
    "node/test-validator",
    "node/download-utils",
    "node/genesis-utils",
    "node/validator",
    "tool/tps-client",
    "tool/feature-gate-client",
    "tool/cli",
    "tool/genesis",
    "tool/clap-v3-utils",
    "tool/keygen",
    "tool/zk-keygen",
    "tool/local-cluster",
    "tool/bench-tps",
    "tool/dos",
    "tool/cargo-registry",
    "tool/tokens",
]

exclude = [
    "lang/ocpl/logger",
    "lang/ocpl/frozen-abi-macro",
    "lang/ocpl/frozen-abi",
    "lang/ocpl/atomic-u64",
    "lang/ocpl/decode-error",
    "lang/ocpl/define-syscall",
    "lang/ocpl/sanitize",
    "lang/ocpl/hash",
    "lang/ocpl/keccak-hasher",
    "lang/ocpl/sha256-hasher",
    "lang/ocpl/pubkey",
    "lang/ocpl/instruction",
    "lang/ocpl/serialize-utils",
    "lang/ocpl/msg",
    "lang/ocpl/program-error",
    "lang/ocpl/program-memory",
    "lang/ocpl/account-info",
    "lang/ocpl/sdk-macro",
    "lang/ocpl/sdk-ids",
    "lang/ocpl/sysvar-id",
    "lang/ocpl/clock",
    "lang/ocpl/epoch-schedule",
    "lang/ocpl/fee-calculator",
    "lang/ocpl/last-restart-slot",
    "lang/ocpl/program-entrypoint",
    "lang/ocpl/rent",
    "lang/ocpl/slot-hashes",
    "lang/ocpl/slot-history",
    "lang/ocpl/bincode",
    "lang/ocpl/stable-layout",
    "lang/ocpl/cpi",
    "lang/ocpl/native-token",
    "lang/ocpl/program-option",
    "lang/ocpl/program-pack",
    "lang/ocpl/secp256k1-recover",
    "lang/ocpl/short-vec",
    "lang/ocpl/serde-varint",
    "lang/ocpl/transaction-error",
    "lang/ocpl/big-mod-exp",
    "lang/ocpl/blake3-hasher",
    "lang/ocpl/borsh",
    "lang/ocpl/epoch-rewards",
    "lang/ocpl/nonce",
    "lang/ocpl/instructions-sysvar",
    "lang/ocpl/system-interface",
    "lang/ocpl/stake-interface",
    "lang/ocpl/sysvar",
    "lang/ocpl/account",
    "lang/ocpl/feature-gate-interface",
    "lang/ocpl/address-lookup-table-interface",
    "lang/ocpl/compute-budget-interface",
    "lang/ocpl/loader-v2-interface",
    "lang/ocpl/loader-v3-interface",
    "lang/ocpl/loader-v4-interface",
    "lang/ocpl/vote-interface",
    "lang/ocpl/message",
    "lang/ocpl/program",
    "lang/ocpl/derivation-path",
    "lang/ocpl/signature",
    "lang/ocpl/bn254",
    "lang/ocpl/feature-set",
    "lang/ocpl/packet",
    "lang/ocpl/precompile-error",
    "lang/ocpl/inflation",
    "lang/ocpl/epoch-info",
    "lang/ocpl/epoch-rewards-hasher",
    "lang/ocpl/fee-structure",
    "lang/ocpl/hard-forks",
    "lang/ocpl/seed-derivable",
    "lang/ocpl/seed-phrase",
    "lang/ocpl/signer",
    "lang/ocpl/keypair",
    "lang/ocpl/nonce-account",
    "lang/ocpl/offchain-message",
    "lang/ocpl/poh-config",
    "lang/ocpl/presigner",
    "lang/ocpl/quic-definitions",
    "lang/ocpl/reward-info",
    "lang/ocpl/reserved-account-keys",
    "lang/ocpl/commitment-config",
    "lang/ocpl/cluster-type",
    "lang/ocpl/serde",
    "lang/ocpl/time-utils",
    "lang/ocpl/shred-version",
    "lang/ocpl/genesis-config",
    "lang/ocpl/rent-collector",
    "lang/ocpl/rent-debits",
    "lang/ocpl/transaction-context",
    "lang/ocpl/validator-exit",
    "lang/ocpl/ocp/ed25519-program",
    "lang/ocpl/ocp/secp256k1-program",
    "lang/ocpl/ocp/secp256r1-program",
    "lang/ocpl/precompiles",
    "lang/ocpl/transaction",
    "lang/ocpl/client-traits",
    "lang/ocpl/system-transaction",
    "lang/ocpl/sdk",
    "lang/ocpl/file-download",
    "lang/ocpl/package-metadata-macro",
    "lang/ocpl/package-metadata",
]

resolver = "2"

[workspace.package]
version = "2.2.0"
authors = ["Bovey Maintainers <maintainers@bovey.xyz>"]
repository = "https://github.com/nabob-labs/bovey"
homepage = "https://bovey.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("bovey"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

[workspace.dependencies]
# On Chain instruction OS
bovey-zk-sdk = { path = "ocios/zk-sdk" }
bovey-curve25519 = { path = "ocios/curve25519" }
bovey-zk-token-sdk = { path = "ocios/zk-token-sdk" }
bovey-bpf = { path = "ocios/bpf" }
bovey-compute-budget = { path = "ocios/compute-budget" }
bovey-log-collector = { path = "ocios/log-collector" }
bovey-metrics = { path = "ocios/metrics" }
bovey-measure = { path = "ocios/measure" }
bovey-timings = { path = "ocios/timings" }
bovey-type-overrides = { path = "ocios/type-overrides" }
bovey-program-runtime = { path = "ocios/program-runtime" }
bovey-poseidon = { path = "ocios/poseidon" }
bovey-security-txt = { path = "ocios/security-txt" }
ocp-address-lookup-table-program = { path = "ocios/ocp/address-lookup-table" }
ocp-bpf-loader-program = { path = "ocios/ocp/bpf-loader" }
ocp-compute-budget-program = { path = "ocios/ocp/compute-budget" }
ocp-config-program = { path = "ocios/ocp/config" }
ocp-loader-v4-program = { path = "ocios/ocp/loader-v4" }
ocp-vote-program = { path = "ocios/ocp/vote", default-features = false }
ocp-stake-program = { path = "ocios/ocp/stake" }
ocp-system-program = { path = "ocios/ocp/system" }
ocp-zk-elgamal-proof-program = { path = "ocios/ocp/zk-elgamal-proof" }
ocp-zk-token-proof-program = { path = "ocios/ocp/zk-token-proof" }
ocp-memo = { path = "ocios/ocp/memo" }
ocp-token = { path = "ocios/ocp/token" }
ocp-program-error-derive = { path = "ocios/ocp/program-error-derive" }
ocp-program-error = { path = "ocios/ocp/program-error" }
ocp-pod = { path = "ocios/ocp/pod" }
ocp-discriminator-syn = { path = "ocios/ocp/discriminator-syn" }
ocp-discriminator-derive = { path = "ocios/ocp/discriminator-derive" }
ocp-discriminator = { path = "ocios/ocp/discriminator" }
ocp-type-length-value-derive = { path = "ocios/ocp/type-length-value-derive" }
ocp-type-length-value = { path = "ocios/ocp/type-length-value" }
ocp-tlv-account-resolution = { path = "ocios/ocp/tlv-account-resolution" }
ocp-token-group-interface = { path = "ocios/ocp/token-group-interface" }
ocp-token-metadata-interface = { path = "ocios/ocp/token-metadata-interface" }
ocp-transfer-hook-interface = { path = "ocios/ocp/transfer-hook-interface" }
ocp-token-confidential-transfer-proof-extraction = { path = "ocios/ocp/token-confidential-transfer-proof-extraction" }
ocp-token-confidential-transfer-proof-generation = { path = "ocios/ocp/token-confidential-transfer-proof-generation" }
ocp-token-confidential-transfer-ciphertext-arithmetic = { path = "ocios/ocp/token-confidential-transfer-ciphertext-arithmetic" }
ocp-elgamal-registry = { path = "ocios/ocp/elgamal-registry" }
ocp-token-2022 = { path = "ocios/ocp/token-2022" }
ocp-associated-token-account-client = { path = "ocios/ocp/associated-token-account-client" }
ocp-associated-token-account = { path = "ocios/ocp/associated-token-account" }
ocp-instruction-padding = { path = "ocios/ocp/instruction-padding" }
bovey-version = { path = "ocios/version" }
bovey-rayon-threadlimit = { path = "ocios/rayon-threadlimit" }
bovey-inline-ocp = { path = "ocios/inline-ocp" }
bovey-lattice-hash = { path = "ocios/lattice-hash" }
bovey-bucket-map = { path = "ocios/bucket-map" }
bovey-vm-transaction = { path = "ocios/vm-transaction" }
bovey-nohash-hasher = { path = "ocios/nohash-hasher" }
bovey-accounts-db = { path = "ocios/accounts-db" }
bovey-builtins-default-costs = { path = "ocios/builtins-default-costs" }
bovey-transaction-view = { path = "ocios/transaction-view" }
bovey-compute-budget-instruction = { path = "ocios/compute-budget-instruction" }
bovey-runtime-transaction = { path = "ocios/runtime-transaction" }
bovey-vm-rent-collector = { path = "ocios/vm-rent-collector" }
bovey-vm-conformance = { path = "ocios/vm-conformance" }
bovey-cost-model = { path = "ocios/cost-model" }
bovey-fee = { path = "ocios/fee" }
bovey-vm = { path = "ocios/vm" }
bovey-builtins = { path = "ocios/builtins" }
bovey-perf = { path = "ocios/perf" }
bovey-vote = { path = "ocios/vote" }
bovey-account-decoder-client-types = { path = "ocios/account-decoder-client-types" }
bovey-transaction-status-client-types = { path = "ocios/transaction-status-client-types" }
bovey-unified-scheduler-logic = { path = "ocios/unified-scheduler-logic" }
bovey-runtime = { path = "ocios/runtime" }

# Consensus
bovey-merkle-tree = { path = "consensus/merkle-tree" }
bovey-entry = { path = "consensus/entry" }
bovey-account-decoder = { path = "consensus/account-decoder" }
bovey-transaction-status = { path = "consensus/transaction-status" }
bovey-storage-proto = { path = "consensus/storage-proto" }
bovey-storage-bigtable = { path = "consensus/storage-bigtable" }
bovey-ledger = { path = "consensus/ledger" }
bovey-poh = { path = "consensus/poh" }

# Network
bovey-net-utils = { path = "network/net-utils" }
bovey-connection-cache = { path = "network/connection-cache",default-features = false }
bovey-rpc-client-api = { path = "network/rpc-client-api" }
bovey-rpc-client = { path = "network/rpc-client", default-features = false }
bovey-remote-wallet = { path = "network/remote-wallet", default-features = false }
bovey-clap-utils = { path = "network/clap-utils" }
bovey-rpc-client-nonce-utils = { path = "network/rpc-client-nonce-utils" }
bovey-pubsub-client = { path = "network/pubsub-client" }
bovey-transaction-metrics-tracker = { path = "network/transaction-metrics-tracker" }
bovey-tls-utils = { path = "network/tls-utils" }
bovey-streamer = { path = "network/streamer" }
bovey-quic-client = { path = "network/quic-client" }
bovey-thin-client = { path = "network/thin-client" }
bovey-tpu-client = { path = "network/tpu-client", default-features = false }
bovey-udp-client = { path = "network/udp-client" }
bovey-client = { path = "network/client" }
bovey-bloom = { path = "network/bloom" }
bovey-gossip = { path = "network/gossip" }

# Access
bovey-tpu-client-next = { path = "access/tpu-client-next" }
bovey-send-transaction-service = { path = "access/send-transaction-service" }
bovey-cli-config = { path = "access/cli-config" }
bovey-faucet = { path = "access/faucet" }
bovey-rpc = { path = "access/rpc" }
bovey-geyser-plugin-interface = { path = "access/geyser-plugin-interface" }
bovey-geyser-plugin-manager = { path = "access/geyser-plugin-manager" }
bovey-turbine = { path = "access/turbine" }
bovey-banking-stage-ingress-types = { path = "access/chain/banking-stage-ingress-types" }
bovey-unified-scheduler-pool = { path = "access/chain/unified-scheduler-pool" }
bovey-wen-restart = { path = "access/chain/wen-restart" }
bovey-thread-manager = { path = "access/chain/thread-manager" }
bovey-core = { path = "access/chain/core" }
bovey-vortexor = { path = "access/vortexor" }

# Node
bovey-banks-interface = { path = "node/banks-interface" }
bovey-banks-server = { path = "node/banks-server" }
bovey-banks-client = { path = "node/banks-client" }
bovey-program-test = { path = "node/program-test" }
bovey-cli-output = { path = "node/cli-output" }
bovey-test-validator = { path = "node/test-validator" }
bovey-download-utils = { path = "node/download-utils" }
bovey-genesis-utils = { path = "node/genesis-utils" }
bovey-validator = { path = "node/validator" }

# Tool
bovey-tps-client = { path = "tool/tps-client" }
bovey-feature-gate-client = { path = "tool/feature-gate-client" }
bovey-cli = { path = "tool/cli" }
bovey-genesis = { path = "tool/genesis" }
bovey-clap-v3-utils = { path = "tool/clap-v3-utils" }
bovey-keygen = { path = "tool/keygen" }
bovey-zk-keygen = { path = "tool/zk-keygen" }
bovey-local-cluster = { path = "tool/local-cluster" }
bovey-bench-tps = { path = "tool/bench-tps" }
bovey-dos = { path = "tool/dos" }
bovey-cargo-registry = { path = "tool/cargo-registry" }
bovey-tokens = { path = "tool/tokens" }

# On Chain Program Language
bovey-logger = { path = "lang/ocpl/logger" }
bovey-frozen-abi-macro = { path = "lang/ocpl/frozen-abi-macro" }
bovey-frozen-abi = { path = "lang/ocpl/frozen-abi" }
bovey-atomic-u64 = { path = "lang/ocpl/atomic-u64" }
bovey-decode-error = { path = "lang/ocpl/decode-error" }
bovey-define-syscall = { path = "lang/ocpl/define-syscall" }
bovey-sanitize = { path = "lang/ocpl/sanitize" }
bovey-hash = { path = "lang/ocpl/hash", default-features = false }
bovey-keccak-hasher = { path = "lang/ocpl/keccak-hasher" }
bovey-sha256-hasher = { path = "lang/ocpl/sha256-hasher" }
bovey-pubkey = { path = "lang/ocpl/pubkey", default-features = false }
bovey-instruction = { path = "lang/ocpl/instruction", default-features = false }
bovey-serialize-utils = { path = "lang/ocpl/serialize-utils" }
bovey-msg = { path = "lang/ocpl/msg" }
bovey-program-error = { path = "lang/ocpl/program-error" }
bovey-program-memory = { path = "lang/ocpl/program-memory" }
bovey-account-info = { path = "lang/ocpl/account-info" }
bovey-sdk-macro = { path = "lang/ocpl/sdk-macro" }
bovey-sdk-ids = { path = "lang/ocpl/sdk-ids" }
bovey-sysvar-id = { path = "lang/ocpl/sysvar-id" }
bovey-clock = { path = "lang/ocpl/clock" }
bovey-epoch-schedule = { path = "lang/ocpl/epoch-schedule" }
bovey-fee-calculator = { path = "lang/ocpl/fee-calculator" }
bovey-last-restart-slot = { path = "lang/ocpl/last-restart-slot" }
bovey-program-entrypoint = { path = "lang/ocpl/program-entrypoint" }
bovey-rent = { path = "lang/ocpl/rent", default-features = false }
bovey-slot-hashes = { path = "lang/ocpl/slot-hashes" }
bovey-slot-history = { path = "lang/ocpl/slot-history" }
bovey-bincode = { path = "lang/ocpl/bincode" }
bovey-stable-layout = { path = "lang/ocpl/stable-layout" }
bovey-cpi = { path = "lang/ocpl/cpi" }
bovey-native-token = { path = "lang/ocpl/native-token" }
bovey-program-option = { path = "lang/ocpl/program-option" }
bovey-program-pack = { path = "lang/ocpl/program-pack" }
bovey-secp256k1-recover = { path = "lang/ocpl/secp256k1-recover" }
bovey-short-vec = { path = "lang/ocpl/short-vec" }
bovey-serde-varint = { path = "lang/ocpl/serde-varint" }
bovey-transaction-error = { path = "lang/ocpl/transaction-error" }
bovey-big-mod-exp = { path = "lang/ocpl/big-mod-exp" }
bovey-blake3-hasher = { path = "lang/ocpl/blake3-hasher" }
bovey-borsh = { path = "lang/ocpl/borsh" }
bovey-epoch-rewards = { path = "lang/ocpl/epoch-rewards" }
bovey-nonce = { path = "lang/ocpl/nonce" }
bovey-instructions-sysvar = { path = "lang/ocpl/instructions-sysvar" }
bovey-system-interface = { path = "lang/ocpl/system-interface" }
bovey-stake-interface = { path = "lang/ocpl/stake-interface" }
bovey-sysvar = { path = "lang/ocpl/sysvar" }
bovey-account = { path = "lang/ocpl/account" }
bovey-feature-gate-interface = { path = "lang/ocpl/feature-gate-interface" }
bovey-address-lookup-table-interface = { path = "lang/ocpl/address-lookup-table-interface" }
bovey-compute-budget-interface = { path = "lang/ocpl/compute-budget-interface" }
bovey-loader-v2-interface = { path = "lang/ocpl/loader-v2-interface" }
bovey-loader-v3-interface = { path = "lang/ocpl/loader-v3-interface" }
bovey-loader-v4-interface = { path = "lang/ocpl/loader-v4-interface" }
bovey-vote-interface = { path = "lang/ocpl/vote-interface" }
bovey-message = { path = "lang/ocpl/message" }
bovey-program = { path = "lang/ocpl/program", default-features = false }
bovey-derivation-path = { path = "lang/ocpl/derivation-path" }
bovey-signature = { path = "lang/ocpl/signature", default-features = false }
bovey-bn254 = { path = "lang/ocpl/bn254" }
bovey-feature-set = { path = "lang/ocpl/feature-set" }
bovey-packet = { path = "lang/ocpl/packet" }
bovey-precompile-error = { path = "lang/ocpl/precompile-error" }
bovey-inflation = { path = "lang/ocpl/inflation" }
bovey-epoch-info = { path = "lang/ocpl/epoch-info" }
bovey-epoch-rewards-hasher = { path = "lang/ocpl/epoch-rewards-hasher" }
bovey-fee-structure = { path = "lang/ocpl/fee-structure" }
bovey-hard-forks = { path = "lang/ocpl/hard-forks", default-features = false }
bovey-seed-derivable = { path = "lang/ocpl/seed-derivable" }
bovey-seed-phrase = { path = "lang/ocpl/seed-phrase" }
bovey-signer = { path = "lang/ocpl/signer" }
bovey-keypair = { path = "lang/ocpl/keypair" }
bovey-nonce-account = { path = "lang/ocpl/nonce-account" }
bovey-offchain-message = { path = "lang/ocpl/offchain-message" }
bovey-poh-config = { path = "lang/ocpl/poh-config" }
bovey-presigner = { path = "lang/ocpl/presigner" }
bovey-quic-definitions = { path = "lang/ocpl/quic-definitions" }
bovey-reward-info = { path = "lang/ocpl/reward-info" }
bovey-reserved-account-keys = { path = "lang/ocpl/reserved-account-keys", default-features = false }
bovey-commitment-config = { path = "lang/ocpl/commitment-config" }
bovey-cluster-type = { path = "lang/ocpl/cluster-type" }
bovey-serde = { path = "lang/ocpl/serde" }
bovey-time-utils = { path = "lang/ocpl/time-utils" }
bovey-shred-version = { path = "lang/ocpl/shred-version" }
bovey-genesis-config = { path = "lang/ocpl/genesis-config" }
bovey-rent-collector = { path = "lang/ocpl/rent-collector" }
bovey-rent-debits = { path = "lang/ocpl/rent-debits" }
bovey-transaction-context = { path = "lang/ocpl/transaction-context" }
bovey-validator-exit = { path = "lang/ocpl/validator-exit" }
ocp-ed25519-program = { path = "lang/ocpl/ocp/ed25519-program" }
ocp-secp256k1-program = { path = "lang/ocpl/ocp/secp256k1-program" }
ocp-secp256r1-program = { path = "lang/ocpl/ocp/secp256r1-program", default-features = false }
bovey-precompiles = { path = "lang/ocpl/precompiles" }
bovey-transaction = { path = "lang/ocpl/transaction" }
bovey-client-traits = { path = "lang/ocpl/client-traits" }
bovey-system-transaction = { path = "lang/ocpl/system-transaction" }
bovey-sdk = { path = "lang/ocpl/sdk" }
bovey-file-download = { path = "lang/ocpl/file-download" }
bovey-package-metadata-macro = { path = "lang/ocpl/package-metadata-macro" }
bovey-package-metadata = { path = "lang/ocpl/package-metadata" }

Inflector = "0.11.4"
axum = "0.7.9"
aquamarine = "0.6.0"
aes-gcm-siv = "0.11.1"
ahash = "0.8.11"
anyhow = "1.0.96"
arbitrary = "1.4.1"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
array-bytes = "=1.4.1"
arrayref = "0.3.9"
arrayvec = "0.7.6"
assert_cmd = "2.0"
assert_matches = "1.5.0"
async-channel = "1.9.0"
async-lock = "3.4.0"
async-trait = "0.1.86"
atty = "0.2.11"
backoff = "0.4.0"
base64 = "0.22.1"
bincode = "1.3.3"
bitflags = { version = "2.8.0" }
blake3 = "1.6.0"
borsh = { version = "1.5.5", features = ["derive", "unstable__schema"] }
borsh0-10 = { package = "borsh", version = "0.10.3" }
bs58 = { version = "0.5.1", default-features = false }
bv = "0.11.1"
byte-unit = "4.0.19"
bytemuck = "1.21.0"
bytemuck_derive = "1.8.1"
bytes = "1.10"
bzip2 = "0.4.4"
caps = "0.5.5"
cargo_metadata = "0.15.4"
cfg_eval = "0.1.2"
cfg-if = "1.0.0"
chrono = { version = "0.4.39", default-features = false }
chrono-humanize = "0.2.3"
clap = "2.33.1"
console = "0.15.10"
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
const_format = "0.2.34"
core_affinity = "0.5.10"
criterion = "0.5.1"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5.14"
csv = "1.3.1"
ctrlc = "3.4.5"
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
dashmap = "5.5.3"
derivation-path = { version = "0.2.0", default-features = false }
derive-where = "1.2.7"
derive_more = { version = "1.0.0", features = ["full"] }
dialoguer = "0.10.4"
digest = "0.10.7"
dir-diff = "0.3.3"
dirs-next = "2.0.0"
dlopen2 = "0.5.0"
dyn-clone = "1.0.18"
eager = "0.1.0"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "0.2.0"
enum-iterator = "1.5.0"
env_logger = "0.9.3"
etcd-client = "0.11.1"
fast-math = "0.1"
fd-lock = "3.0.13"
flate2 = "1.0.31"
five8_const = "0.1.3"
fnv = "1.0.7"
fs_extra = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.29"
gag = "1.0.0"
gethostname = "0.2.3"
getrandom = "0.3.1"
goauth = "0.13.1"
governor = "0.6.3"
hex = "0.4.3"
hidapi = { version = "2.6.3", default-features = false }
histogram = "0.6.9"
hmac = "0.12.1"
http = "0.2.12"
humantime = "2.0.1"
hyper = "0.14.32"
hyper-proxy = "0.9.1"
im = "15.1.0"
indexmap = "2.7.1"
indicatif = "0.17.11"
itertools = "0.12.1"
jemallocator = { package = "tikv-jemallocator", version = "0.6.0", features = [
    "unprefixed_malloc_on_supported_platforms",
] }
js-sys = "0.3.77"
json5 = "0.4.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
lazy-lru = "0.1.3"
lazy_static = "1.5.0"
libc = "0.2.169"
libloading = "0.7.4"
libsecp256k1 = { version = "0.6.0", default-features = false, features = [
    "std",
    "static-context",
] }
light-poseidon = "0.2.0"
log = "0.4.25"
lru = "0.7.7"
lz4 = "1.28.1"
memmap2 = "0.5.10"
memoffset = "0.9"
merlin = { version = "3", default-features = false }
min-max-heap = "1.3.0"
mockall = "0.11.4"
modular-bitfield = "0.11.2"
nix = "0.29.0"
num-bigint = "0.4.6"
num-derive = "0.4"
num-traits = "0.2"
num_cpus = "1.16.0"
num_enum = "0.7.3"
openssl = "0.10"
parking_lot = "0.12"
pbkdf2 = { version = "0.11.0", default-features = false }
pem = "1.1.1"
percentage = "0.1.0"
pickledb = { version = "0.5.1", default-features = false }
predicates = "2.1"
pretty-hex = "0.3.0"
prio-graph = "0.3.0"
proc-macro2 = "1.0.93"
proptest = "1.6"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
qstring = "0.7.2"
qualifier_attr = { version = "0.2.2", default-features = false }
quinn = "0.11.6"
quinn-proto = "0.11.9"
quote = "1.0"
rand = "0.8.5"
rand0-7 = { package = "rand", version = "0.7" }
rand_chacha = "0.3.1"
rand_chacha0-2 = { package = "rand_chacha", version = "0.2.2" }
rayon = "1.10.0"
reed-solomon-erasure = "6.0.0"
regex = "1.11.1"
reqwest = { version = "0.11.27", default-features = false }
reqwest-middleware = "0.2.5"
rolling-file = "0.2.0"
rpassword = "7.3"
rustls = { version = "0.23.23", features = ["std"], default-features = false }
scopeguard = "1.2.0"
semver = "1.0.25"
seqlock = "0.2.0"
serde = "1.0.217" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde-big-array = "0.5.1"
serde_bytes = "0.11.15"
serde_derive = "1.0.217" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.139"
serde_with = { version = "3.12.0", default-features = false }
serde_yaml = "0.9.34"
serial_test = "2.0.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
shuttle = "0.7.1"
signal-hook = "0.3.17"
siphasher = "0.3.11"
slab = "0.4.9"
smallvec = "1.14.0"
smpl_jwt = "0.7.1"
socket2 = "0.5.8"
soketto = "0.7"
static_assertions = "1.1.0"
stream-cancel = "0.8.2"
strum = "0.24"
strum_macros = "0.24"
subtle = "2.6.1"
symlink = "0.1.0"
syn = "2.0"
sys-info = "0.9.1"
sysctl = "0.4.6"
systemstat = "0.2.4"
tar = "0.4.43"
tarpc = "0.29.0"
tempfile = "3.17.1"
test-case = "3.3.1"
thiserror = "2.0.11"
thread-priority = "1.2.0"
tiny-bip39 = "0.8.2"
# Update bovey-tokio patch below when updating this version
tokio = "1.43.0"
tokio-serde = "0.8"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.20.1"
tokio-util = "0.7.13"
toml = "0.8.12"
tonic = "0.9.2"
tonic-build = "0.9.2"
tower = "0.5.2"
trait-set = "0.3.0"
trees = "0.4.2"
tungstenite = "0.20.1"
uriparse = "0.6.4"
url = "2.5.4"
vec_extract_if_polyfill = "0.1.0"
wasm-bindgen = "0.2"
winapi = "0.3.8"
winreg = "0.50"
x509-parser = "0.14.0"
# See "zeroize versioning issues" below if you are updating this version.
zeroize = { version = "1.7", default-features = false }
zstd = "0.13.2"
