[package]
name = "bovey-faucet"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
bovey-clap-utils = { workspace = true }
bovey-cli-config = { workspace = true }
bovey-hash = { workspace = true }
bovey-instruction = { workspace = true }
bovey-keypair = { workspace = true }
bovey-logger = { workspace = true }
bovey-message = { workspace = true }
bovey-metrics = { workspace = true }
bovey-native-token = { workspace = true }
bovey-packet = { workspace = true }
bovey-pubkey = { workspace = true, features = ["rand"] }
bovey-signer = { workspace = true }
bovey-system-interface = { workspace = true }
bovey-system-transaction = { workspace = true }
bovey-transaction = { workspace = true }
bovey-version = { workspace = true }
ocp-memo = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lib]
crate-type = ["lib"]
name = "bovey_faucet"

[[bin]]
name = "bovey-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
