[package]
name = "bovey-geyser-plugin-interface"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true, features = ["std"] }
bovey-clock = { workspace = true }
bovey-signature = { workspace = true }
bovey-transaction = { workspace = true }
bovey-transaction-status = { workspace = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
