[package]
name = "bovey-account-decoder"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
Inflector = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
bv = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
bovey-account = { workspace = true }
bovey-account-decoder-client-types = { workspace = true, features = ["zstd"] }
bovey-clock = { workspace = true }
ocp-config-program = { workspace = true }
bovey-epoch-schedule = { workspace = true }
bovey-fee-calculator = { workspace = true }
bovey-instruction = { workspace = true }
bovey-nonce = { workspace = true }
bovey-program = { workspace = true }
bovey-program-pack = { workspace = true }
bovey-pubkey = { workspace = true }
bovey-rent = { workspace = true }
bovey-sdk-ids = { workspace = true }
bovey-slot-hashes = { workspace = true }
bovey-slot-history = { workspace = true }
bovey-sysvar = { workspace = true }
ocp-token = { workspace = true, features = ["no-entrypoint"] }
ocp-token-2022 = { workspace = true, features = ["no-entrypoint"] }
ocp-token-group-interface = { workspace = true }
ocp-token-metadata-interface = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
bovey-hash = { workspace = true }
bovey-program = { workspace = true }
bovey-pubkey = { workspace = true, features = ["rand"] }
ocp-pod = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
