[package]
name = "bovey-entry"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
dlopen2 = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
bovey-hash = { workspace = true }
bovey-measure = { workspace = true }
bovey-merkle-tree = { workspace = true }
bovey-metrics = { workspace = true }
bovey-packet = { workspace = true }
bovey-perf = { workspace = true }
bovey-rayon-threadlimit = { workspace = true }
bovey-runtime-transaction = { workspace = true }
bovey-sha256-hasher = { workspace = true }
bovey-transaction = { workspace = true }
bovey-transaction-error = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
bovey-keypair = { workspace = true }
bovey-logger = { workspace = true }
bovey-message = { workspace = true }
bovey-perf = { workspace = true, features = ["dev-context-only-utils"] }
bovey-pubkey = { workspace = true }
bovey-reserved-account-keys = { workspace = true }
bovey-signature = { workspace = true }
bovey-signer = { workspace = true }
bovey-system-transaction = { workspace = true }
bovey-transaction = { workspace = true, features = ["verify"] }

[lib]
crate-type = ["lib"]
name = "bovey_entry"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
